--- a/sprint2/practica obligatoria srpint2 unidad 1.ipynb
+++ b/sprint2/practica obligatoria srpint2 unidad 1.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -74,9 +74,43 @@
    "source": [
     "ejer_2 = [1,2,3,4,5]\n",
     "print(\"lista orginal\",ejer_2)\n",
-    "for i in range(0,len(ejer_2)):\n",
+    "for i in range(0,len(ejer_2)):              # \" te cargas la lista antigua \"\n",
     "    ejer_2[i] = ejer_2[i] * ejer_2 [i]\n",
     "print(\"los numeros al cuadrado son\",ejer_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ejer_x = [1,2,3,4,5]\n",
+    "# ejer_x_list = []\n",
+    "# for i in ejer_x:                      \" otro ejemplo si destruir la lista antigua \"\n",
+    "#    ejer_x_list.append(i**2)\n",
+    "# print(ejer_x_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_2 = [1,2,3,4,5]\n",
+    "\n",
+    "resultado = [x**2 for x in ejer_2]        # otro ejemplo \n",
+    "                                        # list comprehension \n",
+    "print(resultado)"
    ]
   },
   {
@@ -101,11 +135,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "ejer_3 = [\"Un\", \"árbol\", \"binario\", \"es\", \"una\", \"estructura\", \"de\", \"un\", \"tipo\", \"particular\", \"a\", \"veces\", \"no\", \"es\", \"ni\", \"binario\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'un': [0, 7], 'es': [3, 13], 'binario': [2, 15]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Diccionario para almacenar los resultados\n",
+    "duplicados = {}\n",
+    "# Elementos que queremos buscar en la lista\n",
+    "target = [\"un\", \"es\", \"binario\"]\n",
+    "# Iterar sobre cada elemento en elementos_a_buscar\n",
+    "for tar in target: # bucle para iterar sobre todos los elementos que estoy buscando duplicados\n",
+    "    indices = []  # Lista para almacenar los índices de cada palabra\n",
+    "    for i, elem in enumerate(ejer_3): # extraer los índices \"i\" de cada elemento de la lista analizada\n",
+    "        if elem.lower() == tar.lower():  # Ignora mayúsculas y minúsculas\n",
+    "            indices.append(i)  # Agrega el índice si encuentra el elemento\n",
+    "    duplicados[tar] = indices  # Asigna la lista de índices al diccionario\n",
+    "print(duplicados)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Índices de 'un': [0, 7]\n",
+      "Índices de 'es': [3, 13]\n",
+      "Índices de 'binario': [2, 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Función para encontrar todos los índices de un elemento duplicado\n",
+    "def encontrar_duplicados(lista, duplicado):\n",
+    "    indices = []\n",
+    "    for i, palabra in enumerate(lista):\n",
+    "        if palabra.lower() == duplicado.lower():  # Ignorar mayúsculas/minúsculas\n",
+    "            indices.append(i)\n",
+    "    return indices\n",
+    "\n",
+    "\n",
+    "duplicado_un = encontrar_duplicados(ejer_3, \"un\")\n",
+    "duplicado_es = encontrar_duplicados(ejer_3, \"es\")\n",
+    "duplicado_binario = encontrar_duplicados(ejer_3, \"binario\")\n",
+    "\n",
+    "# Imprimir resultados\n",
+    "print(f\"Índices de 'un': {duplicado_un}\")\n",
+    "print(f\"Índices de 'es': {duplicado_es}\")\n",
+    "print(f\"Índices de 'binario': {duplicado_binario}\")"
    ]
   },
   {
@@ -128,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,20 +234,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(19, 3, 29, 45, 67)\n"
+      "(19, 3, 29, 45, 67, 78)\n"
      ]
     }
    ],
    "source": [
-    "tupla_nueva = ejer_9[4:9]\n",
+    "tupla_nueva = ejer_9[4:10]  \n",
     "print(tupla_nueva)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 29, 45, 67, 78, 90)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ejer_9[5:11])    # slicing "
    ]
   },
   {
@@ -175,19 +289,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "26\n"
-     ]
+     "data": {
+      "text/plain": [
+       "26"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(len(ejer_9))"
+    "(len(ejer_9))"
    ]
   },
   {
@@ -200,24 +317,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "tuple.index(x): x not in tuple",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mejer_9\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mindex\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m60\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mValueError\u001b[0m: tuple.index(x): x not in tuple"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no esta\n"
      ]
     }
    ],
    "source": [
-    "ejer_9.index(60)\n",
-    "\n"
+    "if 60 in ejer_9:\n",
+    "    print(\"el 60 esta\")\n",
+    "else:\n",
+    "    print(\"no esta\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "el numero 60 esta: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"el numero 60 esta:\", 60 in ejer_9)"
    ]
   },
   {
@@ -251,11 +383,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{3, 29, 45, 67, 78, 90}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "tupla_nueva = (3,29,45,67,78,90)\n"
+    "tupla_nueva = (3,29,45,67,78,90)\n",
+    "set(tupla_nueva)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 3, 1: 29, 2: 45, 3: 67, 4: 78, 5: 90}"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict(enumerate(tupla_nueva))"
    ]
   },
   {
@@ -304,6 +468,31 @@
     "    print(i,\":\",ejer_6[i])\n",
     "    print (i * ejer_6[i])\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n",
+      "242\n",
+      "7986\n",
+      "351384\n",
+      "19326120\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_6 = {1: 11, 2: 22, 3: 33, 4: 44, 5: 55}\n",
+    "resultado = 1\n",
+    "for valor in ejer_6.values():\n",
+    "    resultado *= valor\n",
+    "    print(resultado)"
    ]
   },
   {
@@ -624,6 +813,100 @@
    ],
    "source": [
     "DNI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La letra del DNI es:  K\n"
+     ]
+    }
+   ],
+   "source": [
+    "dni= 55555555\n",
+    "\n",
+    "palabra='TRWAGMYFPDXBNJZSQVHLCKE'\n",
+    "\n",
+    "print('La letra del DNI es: ', palabra[dni%23])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def DNI_valido(dni):\n",
+    "    palabra='TRWAGMYFPDXBNJZSQVHLCKE'\n",
+    "    digitos = dni[:-1]\n",
+    "    letra = dni [-1]\n",
+    "\n",
+    "    chequeo = palabra[int(digitos)%23]\n",
+    "\n",
+    "    condicion1 = len(digitos) == 7 or len(digitos) == 8\n",
+    "    condicion2 = chequeo == letra\n",
+    "\n",
+    "    if condicion1 and condicion2:\n",
+    "        return True   # puedo poner lo que quiera dsp del return \n",
+    "    return False\n",
+    "\n",
+    "dni = \"55555554C\"\n",
+    "\n",
+    "DNI_valido(dni)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def DNI_valido(dni):\n",
+    "    palabra='TRWAGMYFPDXBNJZSQVHLCKE'\n",
+    "\n",
+    "    digitos = dni[:-1] # todo, menos el último índice\n",
+    "\n",
+    "    letra = dni[-1]\n",
+    "\n",
+    "    letra_correcta = palabra[int(digitos)%23]\n",
+    "\n",
+    "    condicion1 = len(digitos) == 7 or len(digitos) == 8\n",
+    "\n",
+    "    condicion2 = letra_correcta == letra\n",
+    "    \n",
+    "    if condicion1 and condicion2:\n",
+    "        return True\n",
+    "    return False\n",
+    "dni = \"55555554C\"\n",
+    "DNI_valido(dni)"
    ]
   },
   {
