--- a/sprint2/08_Practica_Obligatoria_OOP.ipynb
+++ b/sprint2/08_Practica_Obligatoria_OOP.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -116,22 +116,22 @@
     "\n",
     "Jeff.withdraw(2) # Devuelve 'Jeff tiene 68.'\n",
     "\n",
-    "Joe.check(Jeff, 50) # Devuelve 'Joe tiene 120 y Jeff tiene 18.'\n",
+    "Joe.tansfer_money(Jeff, 50) # Devuelve 'Joe tiene 120 y Jeff tiene 18.'\n",
     "\n",
-    "Jeff.check(Joe, 80) # Lanza un ValueError\n",
+    "Jeff.transfer_money(Joe, 80) # Lanza un ValueError\n",
     "\n",
     "Joe.checking_account = True # Habilita la cuenta corriente para Joe\n",
     "\n",
-    "Jeff.check(Joe, 80) # Devuelve 'Jeff tiene 98 y Joe tiene 40'\n",
+    "Jeff.transfer_money(Joe, 80) # Devuelve 'Jeff tiene 98 y Joe tiene 40'\n",
     "\n",
-    "Joe.check(Jeff, 100) # Lanza un ValueError\n",
+    "Joe.transfer_money(Jeff, 100) # Lanza un ValueError\n",
     "\n",
     "Jeff.add_cash(20.00) # Devuelve 'Jeff tiene 118.'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
     "        self.Balance -= cantidad \n",
     "        otro_usuario.Balance += cantidad\n",
     "        \n",
-    " \n",
+    "    \n",
     "\n",
     "    def add_cash(self,Cantidad):\n",
     "        self.Balance += Cantidad\n",
@@ -299,7 +299,136 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    " #try:\n",
+    "        #    dinero_a_agregar = int(dinero_a_agregar)\n",
+    "        #except:\n",
+    "        #    raise TypeError(f\"tu dinero no vale,tiene decimales\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Usuario:  # nombre,dinero,checkin_account\n",
+    "\n",
+    "    def __init__(self,nombre,dinero,checking_account):\n",
+    "        self.nombre = nombre\n",
+    "        self.dinero = dinero\n",
+    "        self.checking_account = checking_account\n",
+    "\n",
+    "    def add_cash(self,dinero_a_agregar):\n",
+    "\n",
+    "        if type(dinero_a_agregar) != int:\n",
+    "            raise ValueError(\"El valor no es entero\")\n",
+    "        if dinero_a_agregar <= 0:\n",
+    "            raise ValueError(\"no puede ser negativo\")\n",
+    "      \n",
+    "        self.dinero += dinero_a_agregar\n",
+    "        \n",
+    "        return f\"{self.nombre}, tiene un saldo de {self.dinero}.\"\n",
+    "    \n",
+    "    def withdraw(self,dinero_a_retirar):\n",
+    "\n",
+    "        if type(dinero_a_retirar) != int:\n",
+    "            raise ValueError(\"El valor no es entero\")\n",
+    "        if dinero_a_retirar <= 0:\n",
+    "            raise ValueError(\"no puede ser negativo\")\n",
+    "        if dinero_a_retirar >= self.dinero:\n",
+    "            raise ValueError(\"no hay suficiente dinero\")\n",
+    "      \n",
+    "        self.dinero -= dinero_a_retirar\n",
+    "        \n",
+    "        return f\"{self.nombre}, tiene un saldo de {self.dinero}.\"\n",
+    "    \n",
+    "    def transfer_money(self, other, transfer_dinero):\n",
+    "        if type(transfer_dinero) != int:\n",
+    "            raise ValueError(\"El valor no es entero\")\n",
+    "        if not other.checking_account:\n",
+    "            raise ValueError (f\"{other.nombre} no tiene la cuentra comprobada\")\n",
+    "        if transfer_dinero <= 0:\n",
+    "            raise ValueError (f\"{other.nombre} no te puede quedar a cero\")\n",
+    "        if transfer_dinero > self.dinero:\n",
+    "            raise ValueError (f\"{self.nombre}no tienes suficiente dinero\")\n",
+    "      \n",
+    "        \n",
+    "        \n",
+    "        self.dinero -= transfer_dinero\n",
+    "        other.dinero += transfer_dinero\n",
+    "\n",
+    "        \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jeff = Usuario(\"jeff\",70,True)\n",
+    "joe = Usuario(\"joe\",70,False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jeff, tiene un saldo de 66.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(jeff.withdraw(2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Usuario: # nombre, dinero, checking_account\n",
+    "    def __init__(self, nombre, dinero, checking_account):\n",
+    "        self.nombre = nombre\n",
+    "        self.dinero = dinero\n",
+    "        self.checking_account = checking_account\n",
+    "    def add_cash(self, dinero_a_agregar):\n",
+    "        if type(dinero_a_agregar) != int:\n",
+    "            raise ValueError(\"El valor no es un entero\")\n",
+    "        if dinero_a_agregar <= 0:\n",
+    "            raise ValueError(\"El valor no puede ser negativo\")\n",
+    "        self.dinero += dinero_a_agregar\n",
+    "        return f\"{self.nombre} tiene un saldo de {self.dinero}.\"\n",
+    "def withdraw(self, dinero_a_retirar):\n",
+    "        if type(dinero_a_retirar) != int:\n",
+    "            raise ValueError(\"El valor no es un entero\")\n",
+    "        if dinero_a_retirar <= 0:\n",
+    "            raise ValueError(\"El valor no puede ser negativo\")\n",
+    "        if dinero_a_retirar >= self.dinero:\n",
+    "            raise ValueError(\"No hay suficiente dinero en la cuenta\")\n",
+    "        self.dinero -= dinero_a_retirar\n",
+    "        return f\"{self.nombre} tiene un saldo de {self.dinero}.\"\n",
+    "def transfer_money(self, other, dinero):\n",
+    "        if type(dinero) != int:\n",
+    "            raise ValueError(\"El valor no es un entero\")\n",
+    "        if not other.checking_account: # if other.checking_account == False\n",
+    "            raise ValueError(f\"{other.nombre} no tiene una cuenta de cheques.\")\n",
+    "        if dinero <= 0:\n",
+    "            raise ValueError(\"La cantidad a agregar debe ser mayor que cero.\")\n",
+    "        if dinero > self.dinero:\n",
+    "            raise ValueError(f\"{self.nombre} no tienes suficiente dinero para la transacción.\")\n",
+    "        self.dinero -= dinero\n",
+    "        other.dinero += dinero\n",
+    "        return f\"{self.nombre} tiene un saldo de {self.dinero} y {other.nombre} tiene un saldo de {other.dinero}\"\n"
+   ]
   },
   {
    "cell_type": "code",
