--- a/sprint 11/18_Practica_Obligatoria_Arboles_de_Decisión_y_Ajuste_de_hiperparámetros.ipynb
+++ b/sprint 11/18_Practica_Obligatoria_Arboles_de_Decisión_y_Ajuste_de_hiperparámetros.ipynb
@@ -1487,11 +1487,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Apuntes clase en directo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ seprar columnas categoricas y nemericas en dos variables (feature_num, feature_cat)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ hacer el train test split mejor asi = `train_set, test_set = train_test_split(df, tset_siz2 = 0.2, random_state =42)`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Analisis de \"unkown\"\n",
+    "for col in df.columns:\n",
+    "    print(f\"Para {col}, unknowns o missings:\", end = \" \")\n",
+    "    try:\n",
+    "        missings = df[col].value_counts()[\"unknown\"]\n",
+    "        print(f\"{missings}, {round(missings/len(df)*100.0,2)}%\")\n",
+    "    except:\n",
+    "        print(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features_encoded_cat_sel1 = []\n",
+    "for col in features_cat_sel1:\n",
+    "    defintive_col = [col_2 for col_2 in train_set.columns if col_2.startswith(col)]\n",
+    "    features_encoded_cat_sel1 += defintive_col\n",
+    "features_encoded_cat_sel1"
+   ]
   }
  ],
  "metadata": {
