--- a/ejercicio_0/mi_primer_notebook.ipynb
+++ b/ejercicio_0/mi_primer_notebook.ipynb
@@ -29,15 +29,330 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e6f4899f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_titanic = pd.read_csv(\"./data/titanic_modified.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "356c8ad6-f9b1-46d2-9966-f4cb4f75b1dd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from scipy.stats import chi2_contingency\n",
+    "\n",
+    "def get_features_cat_regression(dataframe, target_col, pvalue=0.05):\n",
+    "    \"\"\"\n",
+    "    Identifica columnas categóricas (numéricas con baja cardinalidad o explícitamente categóricas)\n",
+    "    que tienen una relación significativa con una columna numérica objetivo usando la prueba de Chi-cuadrado.\n",
+    "\n",
+    "    Parámetros:\n",
+    "    - dataframe: pd.DataFrame. El DataFrame de entrada.\n",
+    "    - target_col: str. Nombre de la columna objetivo, debe ser numérica.\n",
+    "    - pvalue: float. Nivel de significancia para la prueba Chi-cuadrado.\n",
+    "\n",
+    "    Retorna:\n",
+    "    - Una lista de columnas categóricas significativas o None si no se encuentran.\n",
+    "    \"\"\"\n",
+    "    # Dividir columnas explícitamente categóricas y numéricas\n",
+    "    explicit_categorical_cols = [col for col in dataframe.select_dtypes(include=['object', 'category']).columns if col != target_col]\n",
+    "    potential_categorical_cols = [col for col in dataframe.select_dtypes(include=[np.number]).columns\n",
+    "                                   if col != target_col and dataframe[col].nunique() <= 10]\n",
+    "\n",
+    "    # Combinar ambas listas\n",
+    "    all_categorical_cols = explicit_categorical_cols + potential_categorical_cols\n",
+    "\n",
+    "    if not all_categorical_cols:\n",
+    "        print(\"Error: No se encontraron columnas categóricas o numéricas con baja cardinalidad.\")\n",
+    "        return None\n",
+    "\n",
+    "    significant_features = []\n",
+    "\n",
+    "    for col in all_categorical_cols:\n",
+    "        try:\n",
+    "            # Crear una tabla de contingencia\n",
+    "            contingency_table = pd.crosstab(dataframe[col], pd.cut(dataframe[target_col], bins=5))\n",
+    "\n",
+    "            # Realizar la prueba de Chi-cuadrado\n",
+    "            chi2, p, dof, expected = chi2_contingency(contingency_table)\n",
+    "\n",
+    "            # Comprobar si el p-valor es menor que el umbral dado\n",
+    "            if p < pvalue:\n",
+    "                significant_features.append(col)\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            print(f\"Advertencia: Error al procesar la columna '{col}': {e}\")\n",
+    "\n",
+    "    if not significant_features:\n",
+    "        print(\"No se encontraron columnas categóricas con una relación significativa con el target.\")\n",
+    "        return []\n",
+    "\n",
+    "    return significant_features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9acd936",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_features_cat_regression(df_titanic, target_col=\"Survived\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "695df6e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns = ['Pclass', 'Sex', 'SibSp', 'Parch', 'MissingAge', 'Spouse']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "343abc7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def plot_features_cat_regression(dataframe, target_col, categorical_columns, with_individual_plot=False):\n",
+    "    \"\"\"\n",
+    "    Dibuja histogramas de la relación entre las columnas categóricas y la columna objetivo\n",
+    "    utilizando subplots para mostrar todas las gráficas juntas en una cuadrícula.\n",
+    "\n",
+    "    Parámetros:\n",
+    "    - dataframe: pd.DataFrame. El DataFrame con los datos.\n",
+    "    - target_col: str. Nombre de la columna objetivo numérica.\n",
+    "    - categorical_columns: list. Lista de columnas categóricas significativas obtenidas.\n",
+    "    - with_individual_plot: bool. Si True, genera solo gráficos individuales para cada columna.\n",
+    "\n",
+    "    Retorna:\n",
+    "    - None. Dibuja los histogramas en pantalla.\n",
+    "    \"\"\"\n",
+    "    if not categorical_columns:\n",
+    "        print(\"No se proporcionaron columnas categóricas para graficar.\")\n",
+    "        return\n",
+    "\n",
+    "    # Si se solicita gráficos individuales, no crear subplots\n",
+    "    if with_individual_plot:\n",
+    "        for col in categorical_columns:\n",
+    "            try:\n",
+    "                plt.figure(figsize=(10, 6))\n",
+    "                sns.countplot(\n",
+    "                    data=dataframe,\n",
+    "                    x=target_col,\n",
+    "                    hue=col,\n",
+    "                    palette=\"tab10\"\n",
+    "                )\n",
+    "                plt.title(f\"Histograma individual de '{target_col}' agrupado por '{col}'\", fontsize=14)\n",
+    "                plt.xlabel(target_col, fontsize=12)\n",
+    "                plt.ylabel(\"Frecuencia\", fontsize=12)\n",
+    "                plt.xticks(ticks=[0, 1], labels=[\"0\", \"1\"], fontsize=10)\n",
+    "                plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
+    "                plt.legend(title=col, fontsize=10)\n",
+    "                plt.tight_layout()\n",
+    "                plt.show()\n",
+    "            except Exception as e:\n",
+    "                print(f\"Error al graficar la columna '{col}': {e}\")\n",
+    "        return  # Salir de la función tras generar gráficos individuales\n",
+    "\n",
+    "    # Crear subplots si no se solicitan gráficos individuales\n",
+    "    num_cols = len(categorical_columns)\n",
+    "    cols_per_row = 2  # Número de columnas por fila\n",
+    "    rows = (num_cols + cols_per_row - 1) // cols_per_row  # Calcular el número de filas necesarias\n",
+    "\n",
+    "    fig, axes = plt.subplots(nrows=rows, ncols=cols_per_row, figsize=(15, 6 * rows), constrained_layout=True)\n",
+    "    axes = axes.flatten()  # Aplanar la matriz de ejes para iterar fácilmente\n",
+    "\n",
+    "    for i, col in enumerate(categorical_columns):\n",
+    "        try:\n",
+    "            sns.countplot(\n",
+    "                data=dataframe,\n",
+    "                x=target_col,\n",
+    "                hue=col,\n",
+    "                palette=\"tab10\",\n",
+    "                ax=axes[i]\n",
+    "            )\n",
+    "            axes[i].set_title(f\"Histograma de '{target_col}' agrupado por '{col}'\", fontsize=14)\n",
+    "            axes[i].set_xlabel(target_col, fontsize=12)\n",
+    "            axes[i].set_ylabel(\"Frecuencia\", fontsize=12)\n",
+    "            \n",
+    "            axes[i].grid(axis='y', linestyle='--', alpha=0.7)\n",
+    "            axes[i].legend(title=col, fontsize=10)\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error al graficar la columna '{col}': {e}\")\n",
+    "\n",
+    "    # Eliminar ejes vacíos si hay menos subplots que espacios disponibles\n",
+    "    for j in range(i + 1, len(axes)):\n",
+    "        fig.delaxes(axes[j])\n",
+    "\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "012a642a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from toolbox_ML import plot_features_cat_regression "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc5b7034",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_features_cat_regression(df_titanic,target_col=\"Survived\",categorical_columns= columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ccc0c1bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "from scipy.stats import chi2_contingency\n",
+    "import numpy as np\n",
+    "\n",
+    "def filter_and_plot_features(dataframe, target_col=\"\", columns=None, pvalue=0.05, with_individual_plot=False):\n",
+    "    \"\"\"\n",
+    "    Filtra y grafica columnas categóricas que tienen una relación significativa con una columna objetivo.\n",
+    "\n",
+    "    Parámetros:\n",
+    "    - dataframe: pd.DataFrame. El DataFrame de entrada.\n",
+    "    - target_col: str. Nombre de la columna objetivo.\n",
+    "    - columns: list. Lista de columnas categóricas a evaluar. Si está vacía, se seleccionan automáticamente.\n",
+    "    - pvalue: float. Nivel de significancia para la prueba Chi-cuadrado.\n",
+    "    - with_individual_plot: bool. Si True, genera gráficos individuales para cada columna significativa.\n",
+    "\n",
+    "    Retorna:\n",
+    "    - Una lista de columnas que cumplen con las condiciones de significancia.\n",
+    "    \"\"\"\n",
+    "    if not isinstance(dataframe, pd.DataFrame):\n",
+    "        print(\"Error: El argumento 'dataframe' debe ser un DataFrame de pandas.\")\n",
+    "        return None\n",
+    "\n",
+    "    if not target_col or target_col not in dataframe.columns:\n",
+    "        print(\"Error: La columna objetivo no existe o no se especificó correctamente.\")\n",
+    "        return None\n",
+    "\n",
+    "    if not np.issubdtype(dataframe[target_col].dtype, np.number):\n",
+    "        print(\"Error: La columna objetivo debe ser numérica.\")\n",
+    "        return None\n",
+    "\n",
+    "    if columns is None:\n",
+    "        columns = []\n",
+    "\n",
+    "    if not columns:\n",
+    "        # Seleccionar columnas numéricas con baja cardinalidad\n",
+    "        columns = [col for col in dataframe.select_dtypes(include=[np.number]).columns \n",
+    "                   if col != target_col and dataframe[col].nunique() <= 10]\n",
+    "\n",
+    "    if not columns:\n",
+    "        print(\"No se encontraron columnas para evaluar.\")\n",
+    "        return []\n",
+    "\n",
+    "    significant_columns = []\n",
+    "\n",
+    "    for col in columns:\n",
+    "        try:\n",
+    "            # Crear tabla de contingencia\n",
+    "            contingency_table = pd.crosstab(dataframe[col], pd.cut(dataframe[target_col], bins=5))\n",
+    "\n",
+    "            # Realizar prueba de Chi-cuadrado\n",
+    "            chi2, p, dof, expected = chi2_contingency(contingency_table)\n",
+    "\n",
+    "            # Evaluar significancia\n",
+    "            if p < pvalue:\n",
+    "                significant_columns.append(col)\n",
+    "\n",
+    "                # Graficar si se solicita\n",
+    "                if with_individual_plot:\n",
+    "                    plt.figure(figsize=(10, 6))\n",
+    "                    sns.countplot(\n",
+    "                        data=dataframe,\n",
+    "                        x=target_col,\n",
+    "                        hue=col,\n",
+    "                        palette=\"tab10\"\n",
+    "                    )\n",
+    "                    plt.title(f\"Histograma de '{target_col}' agrupado por '{col}'\", fontsize=14)\n",
+    "                    plt.xlabel(target_col, fontsize=12)\n",
+    "                    plt.ylabel(\"Frecuencia\", fontsize=12)\n",
+    "                    plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
+    "                    plt.legend(title=col, fontsize=10)\n",
+    "                    plt.tight_layout()\n",
+    "                    plt.show()\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error al procesar la columna '{col}': {e}\")\n",
+    "\n",
+    "    # Graficar todas las columnas significativas juntas\n",
+    "    if significant_columns:\n",
+    "        num_cols = len(significant_columns)\n",
+    "        cols_per_row = 2  # Número de columnas por fila\n",
+    "        rows = (num_cols + cols_per_row - 1) // cols_per_row\n",
+    "\n",
+    "        fig, axes = plt.subplots(nrows=rows, ncols=cols_per_row, figsize=(15, 6 * rows), constrained_layout=True)\n",
+    "        axes = axes.flatten()\n",
+    "\n",
+    "        for i, col in enumerate(significant_columns):\n",
+    "            sns.countplot(\n",
+    "                data=dataframe,\n",
+    "                x=target_col,\n",
+    "                hue=col,\n",
+    "                palette=\"tab10\",\n",
+    "                ax=axes[i]\n",
+    "            )\n",
+    "            axes[i].set_title(f\"Histograma de '{target_col}' agrupado por '{col}'\", fontsize=14)\n",
+    "            axes[i].set_xlabel(target_col, fontsize=12)\n",
+    "            axes[i].set_ylabel(\"Frecuencia\", fontsize=12)\n",
+    "            \n",
+    "            axes[i].grid(axis='y', linestyle='--', alpha=0.7)\n",
+    "            axes[i].legend(title=col, fontsize=10)\n",
+    "\n",
+    "        # Eliminar subplots vacíos\n",
+    "        for j in range(len(significant_columns), len(axes)):\n",
+    "            fig.delaxes(axes[j])\n",
+    "\n",
+    "        plt.show()\n",
+    "\n",
+    "    return significant_columns\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24776798",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filter_and_plot_features(df_titanic, target_col=\"Survived\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -51,7 +366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
